chore(Spring Boot): Update to Spring Boot 4.0
wip